--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^1.1.2
   flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  
 
 dev_dependencies:
   flutter_test:
